--- a/config/jar_config.json
+++ b/config/jar_config.json
@@ -1,16 +1,1 @@
-{
-  "configs": [
-    {
-      "name": "HEC-DSSVue 3.2.3",
-      "state": "tested",
-      "notes": "this is the best supported configuration",
-      "platform": "x86_64-w64-mingw32",
-      "path.sep": "\\",
-      "dss_location": "resources\\HEC-DSSVue 3.2.3",
-      "jars": ["jar\\hec.jar", "jar\\rma.jar", "jar\\lookup.jar", "jar\\hec-dssvue-3.2.3.jar", "jar\\help\\dssvueHelp.jar"],
-      "libs": ["lib"],
-      "lib.ext": "dll",
-      "JAVA_HOME": "java"
-    }
-  ]
-}
+{"configs":[{"name":"dssvue3-win64","state":"tested","notes":"this is the best supported configuration","platform":"x86_64-w64-mingw32","path.sep":"\\","dss_location":"D:\\gitRepo\\frm_tool_urc_to_dss\\resources\\HEC-DSSVue-v3.0.00.212","jars":["jar\\hec.jar","jar\\rma.jar","jar\\lookup.jar","jar\\hec-dssvue-v3.0.jar","jar\\help\\dssvueHelp.jar"],"libs":"lib","lib.ext":"dll","JAVA_HOME":"java"}]}
